--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -8,7 +8,10 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
     "jQuery": "3.0.0.1",
-    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
+    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
+    "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
+    "jQuery.Validation": "1.15.0",
+    "jQuery.Validation.Unobtrusive": "2.0.20710"
   },
 
   "tools": {
