--- a/src/TheWorld/bower.json
+++ b/src/TheWorld/bower.json
@@ -3,6 +3,14 @@
   "private": true,
   "dependencies": {
     "underscore": "~1.8.3",
-    "jquery": "~3.0.0"
+    "jquery": "~3.0.0",
+    "jquery-validation": "~1.15.0",
+    "jquery-validation-unobtrusive": "~3.2.6",
+    "bootstrap": "~3.3.6",
+    "Font-Awesome": "~4.6.3",
+    "bootswatch": "~3.3.6+2"
+  },
+  "resolutions": {
+    "jquery": ">=1.8"
   }
 }
