--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -9,9 +9,9 @@
     "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
     "jQuery": "3.0.0.1",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-    "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
-    "jQuery.Validation": "1.15.0",
-    "jQuery.Validation.Unobtrusive": "2.0.20710"
+    "Microsoft.Extensions.Configuration": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final"
   },
 
   "tools": {
